<resources>
    <string name="app_name">ComicVine</string>
    <string name="no_issues">There is not issues to display</string>
    <string name="title_activity_main">ComicBook</string>
    <string name="latest_issues">Latest Issues</string>
    <string name="list">List</string>
    <string name="grid">Grid</string>
    <string name="issue_details">Issue Details</string>
    <string name="teams">Teams</string>
    <string name="characters">Characters</string>
    <string name="locations">Locations</string>
    <string name="error_has_ocurred">An error has occured</string>
    <string name="no_internet_connection">There is not an open connection to internet</string>
</resources>
